# PyInvestAdvisor

./: .gitignore  README.md  pyproject.toml
py_invest_advisor/: agent.py  prompt.py
py_invest_advisor/sub_agents/data_analyst/: agent.py  prompt.py
py_invest_advisor/sub_agents/execution_analyst/: agent.py  prompt.py
py_invest_advisor/sub_agents/risk_analyst/: agent.py  prompt.py
py_invest_advisor/sub_agents/trading_analyst/: agent.py  prompt.py
py_invest_advisor/tools/: tools.py
tests/: test_agents.py
